force-app/main/default/objects/Volunteer_Hours__c/Volunteer_Hours__c.object-meta.xml
<CustomObject>
    <label>Volunteer Hours</label>
    <nameField>
        <displayFormat>VH {00000000}</displayFormat>
        <label>VH No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>