force-app/main/default/objects/Volunteer_Hours__c/fields/Campaign_Day__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Day__c</fullName>
    <formula>Campaign__r.Start_Date_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Day</label>
    <type>Text</type>
</CustomField>