force-app/main/default/objects/Volunteer_Hours__c/fields/Campaign_Region__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Region__c</fullName>
    <formula>TEXT(Campaign__r.Region__c)</formula>
    <label>Campaign Region</label>
    <type>Text</type>
</CustomField>