force-app/main/default/objects/Volunteer_Hours__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <label>Volunteering Date</label>
    <type>Date</type>
</CustomField>