force-app/main/default/objects/Volunteer_Hours__c/fields/Campaign_Time__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Time__c</fullName>
    <description>Campaign__r.Start_Date_Day__c   &amp; &quot; &quot; &amp; TEXT(DAY( Campaign__r.StartDate ))+&quot;/&quot; +TEXT(MONTH(Campaign__r.StartDate))+&quot;/&quot; +TEXT(YEAR(Campaign__r.StartDate)) &amp; &quot; session time is &quot; &amp; TEXT(Campaign__r.Start_Time__c) &amp; &quot;-&quot; &amp; TEXT(Campaign__r.End_Time__c)</description>
    <formula>TEXT(Campaign__r.Start_Time__c) &amp; &quot;-&quot; &amp; TEXT(Campaign__r.End_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Time</label>
    <type>Text</type>
</CustomField>