force-app/main/default/objects/Volunteer_Hours__c/fields/Campaign_Venue__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Venue__c</fullName>
    <formula>Campaign__r.Venue_Website_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Venue</label>
    <type>Text</type>
</CustomField>