force-app/main/default/objects/Volunteer_Hours__c/fields/Campaign_Volunteer_Link__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Volunteer_Link__c</fullName>
    <formula>Campaign__r.Volunteer_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Volunteer List Link</label>
    <type>Text</type>
</CustomField>