force-app/main/default/objects/Volunteer_Hours__c/fields/Class_Assisting__c.field-meta.xml
<CustomField>
    <fullName>Class_Assisting__c</fullName>
    <formula>IF(INCLUDES(Role__c, &quot;Class Assisting&quot;) , TRUE, FALSE)</formula>
    <inlineHelpText>If has Role = Class Assisting</inlineHelpText>
    <label>Class Assisting</label>
    <type>Checkbox</type>
</CustomField>