force-app/main/default/objects/Volunteer_Hours__c/fields/Class_Website_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Website_Name__c</fullName>
    <formula>Campaign__r.Venue_Website_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Website Name</label>
    <type>Text</type>
</CustomField>