force-app/main/default/objects/Volunteer_Hours__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Volunteer_Status__c</field>
            <operation>equals</operation>
            <value>Application, Prospective, Pending - Active, Active</value>
        </filterItems>
        <infoMessage>Defaults to Contacts with Status = Application, Prospective, Pending - Active, Active</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Hours</relationshipLabel>
    <relationshipName>Volunteer_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>