force-app/main/default/objects/Volunteer_Hours__c/fields/Contact_MSISDN__c.field-meta.xml
<CustomField>
    <fullName>Contact_MSISDN__c</fullName>
    <formula>Contact__r.MSISDN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact MSISDN</label>
    <type>Text</type>
</CustomField>