force-app/main/default/objects/Volunteer_Hours__c/fields/Contact_Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Volunteer_Status__c</fullName>
    <formula>TexT(Contact__r.Volunteer_Status__c)</formula>
    <label>Contact Volunteer Status</label>
    <type>Text</type>
</CustomField>