force-app/main/default/objects/Volunteer_Hours__c/fields/Online_Comments__c.field-meta.xml
<CustomField>
    <fullName>Online_Comments__c</fullName>
    <inlineHelpText>Online Comments - will be exposed to the Volunteer in the Portal</inlineHelpText>
    <label>Online Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>