force-app/main/default/objects/Volunteer_Hours__c/fields/Online_Email__c.field-meta.xml
<CustomField>
    <fullName>Online_Email__c</fullName>
    <inlineHelpText>Will be entered from Online Form</inlineHelpText>
    <label>Online - Email</label>
    <type>Email</type>
</CustomField>