force-app/main/default/objects/Volunteer_Hours__c/fields/Online_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Online_First_Name__c</fullName>
    <inlineHelpText>Will be entered from Online Form</inlineHelpText>
    <label>Online - First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>