force-app/main/default/objects/Volunteer_Hours__c/fields/Online_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Online_Mobile__c</fullName>
    <label>Online - Mobile</label>
    <length>200</length>
    <type>Text</type>
</CustomField>