force-app/main/default/objects/Volunteer_Hours__c/fields/Online_Self_Registered__c.field-meta.xml
<CustomField>
    <fullName>Online_Self_Registered__c</fullName>
    <label>Online Self Registered</label>
    <type>Date</type>
</CustomField>