force-app/main/default/objects/Volunteer_Hours__c/fields/Online_Volunteer_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Online_Volunteer_Confirmation__c</fullName>
    <formula>HYPERLINK(&quot;https://www.tfaforms.com/4870893?VHID=&quot; &amp;  Id   , &quot;https://www.tfaforms.com/4870893?VHID=&quot; &amp; Id)</formula>
    <inlineHelpText>Online Confirmation link sent to Volunteer</inlineHelpText>
    <label>Online Volunteer Confirmation</label>
    <type>Text</type>
</CustomField>