force-app/main/default/objects/Volunteer_Hours__c/fields/Online_Volunteer_Response__c.field-meta.xml
<CustomField>
    <fullName>Online_Volunteer_Response__c</fullName>
    <inlineHelpText>Date/Time when Volunteer responded to volunteering confirmation online</inlineHelpText>
    <label>Online - Volunteer Response</label>
    <type>DateTime</type>
</CustomField>