force-app/main/default/objects/Volunteer_Hours__c/fields/SMS_Email__c.field-meta.xml
<CustomField>
    <fullName>SMS_Email__c</fullName>
    <label>SMS Email</label>
    <type>Email</type>
</CustomField>