force-app/main/default/objects/Volunteer_Hours__c/fields/SMS_Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reminder_Sent_Date__c</fullName>
    <label>Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>