force-app/main/default/objects/Volunteer_Hours__c/fields/SMS_Reply__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reply__c</fullName>
    <label>SMS Reply</label>
    <type>DateTime</type>
</CustomField>