force-app/main/default/objects/Volunteer_Hours__c/fields/SMS_Reply_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reply_Message__c</fullName>
    <label>SMS Reply Message</label>
    <type>TextArea</type>
</CustomField>