force-app/main/default/objects/Volunteer_Hours__c/fields/VC_Email__c.field-meta.xml
<CustomField>
    <fullName>VC_Email__c</fullName>
    <label>VC Email</label>
    <type>Email</type>
</CustomField>