force-app/main/default/objects/Volunteer_Hours__c/fields/VC_Mobile__c.field-meta.xml
<CustomField>
    <fullName>VC_Mobile__c</fullName>
    <formula>Campaign__r.Volunteer_Coordinator__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VC Mobile</label>
    <type>Text</type>
</CustomField>