force-app/main/default/objects/Volunteer_Hours__c/fields/VC_Name__c.field-meta.xml
<CustomField>
    <fullName>VC_Name__c</fullName>
    <formula>Campaign__r.Volunteer_Coordinator__r.FirstName  &amp; &quot; &quot; &amp;  Campaign__r.Volunteer_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VC Name</label>
    <type>Text</type>
</CustomField>