force-app/main/default/objects/Volunteer_Hours__c/fields/Volunteer_Abbreviated_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Abbreviated_Name__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; + LEFT(Contact__r.LastName, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Abbreviated Name</label>
    <type>Text</type>
</CustomField>