force-app/main/default/objects/Volunteer_Hours__c/fields/Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>This will default to 3 if left blank on creation</inlineHelpText>
    <label>Volunteer Hours</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>