force-app/main/default/objects/Volunteer_Hours__c/fields/Volunteer_Missing_from_DB__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Missing_from_DB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volunteer Missing from DB</label>
    <type>Checkbox</type>
</CustomField>