force-app/main/default/objects/Volunteer_Hours__c/validationRules/Internal_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Contact</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.Username &lt;&gt; &quot;lgfb_nz@lgfbnz.force.com&quot; , NOT(ISBLANK(Contact_Id__c)) ,   OR(ISBLANK(Contact__r.MobilePhone ),  ISBLANK(Contact__r.Email)))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>A Volunteer Contact is required to have a Mobile or Email. Please cancel and update the Contact&apos;s Mobile or Email</errorMessage>
</ValidationRule>