force-app/main/default/objects/Volunteer_Hours__c/validationRules/Internal_Role_and_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Role_and_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.Username &lt;&gt; &quot;lgfb_nz@lgfbnz.force.com&quot; , NOT(ISBLANK(Contact_Id__c)) ,  OR(TEXT(Role__c) = &quot;&quot;, TEXT( Volunteer_Status__c )= &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>A Role and Status is required</errorMessage>
</ValidationRule>