force-app/main/default/objects/Volunteer_Hours__c/validationRules/Internal_User_Contact_Cant_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_User_Contact_Cant_be_Changed</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.Username &lt;&gt; &quot;lgfb_nz@lgfbnz.force.com&quot;,  ISCHANGED(Contact_Id__c), PRIORVALUE(Contact__c) &lt;&gt; &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>The Contact can&apos;t be updated please create a new record</errorMessage>
</ValidationRule>