force-app/main/default/objects/Volunteer_Hours__c/validationRules/Internal_User_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_User_Contact_Required</fullName>
    <active>false</active>
    <errorConditionFormula>$User.Username &lt;&gt; &quot;lgfb_nz@lgfbnz.force.com&quot; &amp;&amp;  ISBLANK(Contact_Id__c)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>A Volunteer Contact is required</errorMessage>
</ValidationRule>