force-app/main/default/objects/Volunteer_Hours__c/validationRules/Mobile_Spaces.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Spaces</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Online_Mobile__c ,&quot; &quot;)</errorConditionFormula>
    <errorDisplayField>Online_Mobile__c</errorDisplayField>
    <errorMessage>Please remove the spaces from the Mobile No</errorMessage>
</ValidationRule>