force-app/main/default/objects/Volunteer_Hours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Online_Mobile__c</columns>
    <columns>Volunteer_Hours__c</columns>
    <columns>Online_Email__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>VC_Name__c</columns>
    <columns>Campaign_Region__c</columns>
    <columns>Role__c</columns>
    <columns>SMS_Reminder_Sent_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>