force-app/main/default/objects/Volunteer_Hours__c/listViews/All_2021.listView-meta.xml
<ListView>
    <fullName>All_2021</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Volunteer_Status__c</columns>
    <columns>Role__c</columns>
    <columns>Volunteer_Missing_from_DB__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>VC_Name__c</columns>
    <columns>Campaign_Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SMS_Reminder_Sent_Date__c</columns>
    <columns>Online_Volunteer_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>startsWith</operation>
        <value>2024</value>
    </filters>
    <label>All 2024</label>
</ListView>