force-app/main/default/objects/Volunteer_Hours__c/listViews/All_2023.listView-meta.xml
<ListView>
    <fullName>All_2023</fullName>
    <columns>Online_Self_Registered__c</columns>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>VC_Name__c</columns>
    <columns>Contact_Volunteer_Status__c</columns>
    <columns>Online_Email__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>Campaign_Region__c</columns>
    <columns>Role__c</columns>
    <columns>SMS_Reminder_Sent_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>startsWith</operation>
        <value>2025</value>
    </filters>
    <label>All 2025</label>
</ListView>