force-app/main/default/objects/Volunteer_Hours__c/listViews/All_AKL.listView-meta.xml
<ListView>
    <fullName>All_AKL</fullName>
    <booleanFilter>(1 AND 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>Campaign_Region__c</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>VC_Name__c</columns>
    <columns>Role__c</columns>
    <columns>VC_Email__c</columns>
    <columns>SMS_Reminder_Sent_Date__c</columns>
    <columns>Online_Volunteer_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Region__c</field>
        <operation>contains</operation>
        <value>Auckland</value>
    </filters>
    <filters>
        <field>Campaign_Region__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All AKL</label>
</ListView>