force-app/main/default/objects/Volunteer_Hours__c/listViews/Blank_Contact.listView-meta.xml
<ListView>
    <fullName>Blank_Contact</fullName>
    <columns>Volunteer_Missing_from_DB__c</columns>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>VC_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Online_Email__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>Online_Mobile__c</columns>
    <columns>Role__c</columns>
    <columns>Volunteer_Hours__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Online_First_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Blank Contact</label>
</ListView>