force-app/main/default/objects/Volunteer_Hours__c/listViews/Interested.listView-meta.xml
<ListView>
    <fullName>Interested</fullName>
    <columns>SMS_Reminder_Sent_Date__c</columns>
    <columns>SMS_Reply__c</columns>
    <columns>NAME</columns>
    <columns>SMS_Reply_Message__c</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Online_Email__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>Online_Mobile__c</columns>
    <columns>Role__c</columns>
    <columns>Volunteer_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Status__c</field>
        <operation>equals</operation>
        <value>Interested</value>
    </filters>
    <label>Interested</label>
    <language>en_US</language>
</ListView>