force-app/main/default/objects/Volunteer_Hours__c/listViews/Self_Registration.listView-meta.xml
<ListView>
    <fullName>Self_Registration</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>SMS_Reminder_Sent_Date__c</columns>
    <columns>Online_Self_Registered__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Volunteer_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Online_Self_Registered__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Self Registration</label>
</ListView>