force-app/main/default/objects/Volunteer_Hours__c/listViews/SMS_Reply.listView-meta.xml
<ListView>
    <fullName>SMS_Reply</fullName>
    <columns>NAME</columns>
    <columns>SMS_Reply_Message__c</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Online_Email__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>Online_Mobile__c</columns>
    <columns>Role__c</columns>
    <columns>Volunteer_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMS_Reply_Message__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SMS Reply</label>
    <language>en_US</language>
</ListView>