force-app/main/default/objects/Volunteer_Hours__c/listViews/Upcoming_Campaigns.listView-meta.xml
<ListView>
    <fullName>Upcoming_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>SMS_Reminder_Sent_Date__c</columns>
    <columns>SMS_Reply__c</columns>
    <columns>Online_Email__c</columns>
    <columns>Online_First_Name__c</columns>
    <columns>Online_Last_Name__c</columns>
    <columns>Online_Mobile__c</columns>
    <columns>Role__c</columns>
    <columns>Volunteer_Hours__c</columns>
    <columns>VC_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Volunteer_Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <label>Upcoming Campaigns</label>
</ListView>